# 25a-emb-expert-1-lucasespina

./: CMakeLists.txt
freertos/: FreeRTOSConfig.h
main/: CMakeLists.txt  main.c
mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
